# lab3

./: 1BC.txt  CMakeLists.txt  My2BitComp  UML diagram  circuit_description.txt  half_add.txt  mylaunch.txt
include/: circuit.h  gate.h  person.h  simulator.h  soft_circuit.h  types.h  wire.h
src/: ExampleReadCircuitFile.cpp  circuit.cpp  gate.cpp  main.cpp  person.cpp  simulator.cpp  soft_circuit.cpp  wire.cpp
